[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mini-keep"
version = "0.1.0"
description = "Tiny note-taking backend and UI in one Python file."
readme = "README.md"
requires-python = ">=3.10"

[project.scripts]
mini-keep = "server:main"

[tool.setuptools]
py-modules = ["server"]
